# track-app

./: .env  Cargo.toml  Dockerfile  README.md
docs/: Воронкова Е А Курсовая.docx  Отзыв.docx  Пояснительная записка КР ВоронковаЕА.docx
migrations/: 20250301120000_create_tables.sql
src/: db.rs  handlers.rs  main.rs  models.rs
static/: style.css
templates/: base.html.tera  delivery.html.tera  index.html.tera
